--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ethanmmhaugen.github.io/portfolio",
+  "homepage": "https://ethanmmhaugen.github.io/portfolio",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -7,14 +7,16 @@
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "i": "^0.3.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
